# axum-base-generate-by-gpt-4

./: Cargo.toml
src/: main.rs  models.rs  schema.rs
