[package]
name = "axum_diesel_postgres_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.3"
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
uuid = { version = "0.8", features = ["v4"] }
